# consciouss-ai

./: .env  .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.web.json
native/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
native/src/: accessibility.rs  attention.rs  input.rs  lib.rs  screen.rs  utils.rs  windows.rs
resources/: clap-detector.html
src/main/: index.ts  types.ts
src/preload/: clap.ts  index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  types.ts
src/renderer/src/assets/: main.css
src/renderer/src/components/: ActionBadge.tsx  ActionCard.tsx  AppBackground.tsx  ChatPanel.tsx  CommandBar.tsx  ContainerTextFlip.tsx  ContextStrip.tsx  ControlStrip.tsx  GlassContainer.tsx  Header.tsx  HomeView.tsx  LoginLogsView.tsx  LoginView.tsx  LogoIcon.tsx  NativeLab.tsx  NeuralPulse.tsx  OrbShader.tsx  QuickActionCard.tsx  Sidebar.tsx  SovereignHUD.tsx  SplashScreen.tsx  SpotlightBar.tsx  StatusChips.tsx  TelegramView.tsx  WorkflowsView.tsx
src/renderer/src/components/workflow/: ActionNode.tsx  AnimatedEdge.tsx  NodeConfigPanel.tsx  NodePalette.tsx  TriggerNode.tsx  WorkflowCanvas.tsx  workflowStyles.css
src/renderer/src/hooks/: useAttention.ts  useOpenRouter.ts  useScreenCapture.ts  useVoiceInput.ts
src/renderer/src/lib/: accessibility.ts  actions.ts  memory.ts  orchestrator.ts  prompts.ts  setOfMark.ts
