[package]
name = "consciouss-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs bridge (Node.js native addon)
napi = { version = "2", default-features = false, features = ["napi9", "async", "serde-json"] }
napi-derive = "2"

# Input automation (mouse, keyboard)
enigo = { version = "0.2", default-features = false }

# macOS frameworks
core-graphics = "0.24"
core-foundation = "0.10"

# Image encoding for screen capture
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# System information
sysinfo = "0.32"

# Accessibility
libc = "0.2"
accessibility-sys = "0.2.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
